<resources>
    <string name="app_name">Administrador de tareas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="start_session">Iniciar sesion</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">Olvide mi Contraseña</string>
    <string name="remember_user">Recordar mi usuario en este dispositivo</string>
    <string name="start">Iniciar</string>
    <string name="not_has_account">No tengo una cuenta</string>
    <string name="crearcuenta">Crear Cuenta</string>
    <string name="full_name">Nombre Completo</string>
    <string name="signup">Resgistrarse</string>
    <string name="i_has_account">Ya tengo una cuenta</string>
    <string name="recover_password">Recuperar Contraseña</string>
    <string name="recover">Recuperar</string>
    <string name="Save">Guardar</string>
    <string name="is_required">Es requerrido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_forgot_password">Revisa tu correo, para recuperar tu contraseña</string>
    <string name="lista_de_tareas">Lista de Tareas</string>
    <string name="add_todo">Agregar una Tarea</string>
</resources>
