...
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:switchPadding="5dp"
        android:text="@string/remember_user" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/start" />

    <Button
...
